Riley Williams		<rhw@MemAlpha.cx>		16 Nov 1998-29 Oct 2001
Roman Festchook 	<roma@polesye.net>		27 Oct 2001
Simon Weijgers		<simon@weijgers.com>		16 Sep 1998-15 Nov 1999
Simon Wood						06 Jan 2000-12 Jan 2000
Thomas McWilliams	<tgm9999@yahoo.com>		27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Mon Oct 29 18:26:24 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Brought RELNOTES up to date.

Mon Oct 29 13:12:49 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Completed contributors table from CHANGELOG entries.
	* Corrected mis-spelt email for Harry Kalogirou in CHANGELOG entry.
	* Spellchecked CHANGELOG using British English spellings throughout.
	* Updated TODO document to reflect targets for various releases.

Mon Oct 29 11:03:54 GMT 2001	Paul Nasrat <pnasrat@uk.now.com>.

	* Makefile patches to compile for SiBO.

Sat Oct 27 00:06:00 EEST 2001	Roman Festchook <roma@polesye.net>

	* Added the Russian FAQ to the Documentation.

Thu Oct 25 23:14:32 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Updated elks/BUGS to match elks/BUGS.html
	* Updated elks/INSTALLATION to match elks/INSTALLATION.html

===============================================================================

Tue Oct 23 17:36:10 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.88

	* Updated include/linuxmt/autoconf.h to match `make defconfig` results.

===============================================================================

Tue Oct 23 01:44:24 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.88-pre1.

	* Brought Makefile-rules up to date.
	* Removed includes for compile.h and version.h - sorry!
	* Preliminary version of documentation of Makefile structure added.

Mon Oct 22 14:22:41 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Corrected ELKS_VERSION_CODE calculation - it didn't work when
	  SUBLEVEL was 0, a case I forgot to test :(((