@@ -29,6 +29,11 @@ Thomas McWilliams	<tgm9999@yahoo.com>		27 Aug 1999-02 Apr 2001
 
 -------------------------------------------------------------------------------
 
+Fri Nov 02 16:06:39 EET 2001 Harry Kalogirou <harkal@rainbow.cs.unipi.gr>
+
+	* Rolled back Riley's changes to the ktcp Makefile that caused
+	  problems.
+
 Mon Oct 29 18:26:24 GMT 2001	Riley Williams <rhw@MemAlpha.cx>
 
 	* Brought RELNOTES up to date.
